--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,20 +60,11 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/btn_extract_gapps"
+            android:id="@+id/btn_install_microg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="extract gapps" />
-
-        <Button
-            android:id="@+id/btn_update_gapps"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="update gapps" />
-
-
+            android:text="install microg" />
     </TableRow>
 
     <TableRow
