--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,18 +102,19 @@
         android:background="#FF0000">
 
         <Button
-            android:id="@+id/btn_goto_cts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/go_to_ctstest_service" />
-
-        <Button
             android:id="@+id/btn_install_microg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/install_microg" />
+
+        <Button
+            android:id="@+id/btn_uninstall_microg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/uninstall_microg" />
+
     </TableRow>
 
     <TableRow
